# unified-LS

./: .copier-answers.yml  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements-exact.txt  requirements.txt
.github/workflows/: python-package.yml  python-test.yml
analysis/: figures.ipynb  run_ls_models.py
analysis/models/: ls_LNRT.stan  ls_lnrt.stan  ls_lnrt_fixed_theta.stan  ls_pcm_fixed_theta.stan  ls_pcm_fixed_theta_pip.stan  ls_unified.stan  ls_unified_pip.stan  ls_unified_separate_gamma.stan  ls_unified_separate_gamma_pip.stan  ls_zinb.stan  ls_zip.stan  pcm_fixed_theta  pcm_fixed_theta.stan
doc_src/: Makefile
doc_src/source/: build_reqs.py  conf.py  index.rst  index_documentation.rst  sphinx_utils.py
doc_src/source/_static/: center_title.css
doc_src/source/_templates/: class_name_only.rst  function_name_only.rst  method_name_only.rst  version.html
doc_src/source/_templates/autosummary/: class.rst
doc_src/source/reference/: data_import.rst  index_api.rst  run_ls_models.rst
docs/: genindex.html  index.html  index_documentation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/analysis/: run_ls_models.html
docs/_modules/utils/: data_import.html  rotate.html
docs/_notebooks/: figures.html
docs/_sources/: index.rst.txt
docs/_sources/reference/: data_import.rst.txt  rotate.rst.txt
docs/_static/: center_title.css
docs/reference/: data_import.html  index_api.html  rotate.html  run_ls_models.html
exploratory/: ls-irt_scratch.ipynb
presentation/: Unified-LS-2025-1006.pptx
utils/: data_import.py  rotate.py
